--- a/src/components/InfiniteRooms/Infinite.css
+++ b/src/components/InfiniteRooms/Infinite.css
@@ -1,11 +1,8 @@
 .infinite {
-    overflow: hidden;
-    overflow-y: scroll;
-    //box-sizing: border-box;
-    padding: 20px;
+
 }
 .spinner {
-    margin: 20px auto;
+    margin: auto;
     width: 50px;
     height: 40px;
     text-align: center;
